# surtur

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  Session.vim  cabal.project  surtur.cabal
.github/workflows/: ci.yml
src/: Surtur.hs
src/Surtur/: Device.hs  Instance.hs  Proof.hs  TH.hs
src/Surtur/Instance/: CoreVersioning.hs  Extensions.hs
src/Surtur/Internal/: Proof.hs
