cabal-version:   3.0
name:            surtur
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
copyright:       2020 John M.
maintainer:      John M. <riuga@tuta.io>
author:          John M.
tested-with:     ghc ==8.8.3
homepage:        https://github.com/Riuga/surtur
bug-reports:     https://github.com/Riuga/surtur/issues
synopsis:        See README for more info
description:     See README for more info
category:        Graphics
build-type:      Simple
extra-doc-files:
    README.md
    CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/RiugaBachi/surtur.git

library
    exposed-modules:
        Surtur.Instance
        Surtur.Instance.CoreVersioning
        Surtur.Instance.Extensions
        Surtur.Device
        Surtur.Proof
        Surtur.TH

    hs-source-dirs:     src
    other-modules:      Surtur.Internal.Proof
    default-language:   Haskell2010
    default-extensions:
        TypeFamilies RankNTypes ExistentialQuantification LambdaCase
        MultiParamTypeClasses ScopedTypeVariables KindSignatures DataKinds
        ConstraintKinds QuantifiedConstraints TemplateHaskell
        DerivingStrategies GeneralizedNewtypeDeriving DeriveAnyClass
        TypeOperators UndecidableInstances PolyKinds FlexibleInstances
        FlexibleContexts AllowAmbiguousTypes TypeApplications
        StandaloneDeriving ViewPatterns DuplicateRecordFields
        OverloadedStrings DeriveFunctor FunctionalDependencies 
        InstanceSigs EmptyCase NoStarIsType StandaloneKindSignatures
        DerivingVia GADTs BangPatterns LiberalTypeSynonyms

    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
        -Wincomplete-record-updates

    build-depends:
        base >=4.14.0.0 && <5,
        bytestring ^>=0.10,
        critical -any,
        extra ^>=1.7,
        managed -any,
        mtl ^>=2.2,
        multistate ^>=0.8,
        singletons ^>=2.7,
        template-haskell >=2.15,
        text ^>=1.2,
        th-abstraction ^>=0.3,
        transformers ^>=0.5,
        type-errors-pretty -any,
        vector ^>=0.12,
        vulkan -any

    if impl(ghc >=8.0)
        ghc-options: -Wredundant-constraints

    if impl(ghc >=8.2)
        ghc-options: -fhide-source-paths

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists -Wpartial-fields

    if impl(ghc >=8.8)
        ghc-options: -Wmissing-deriving-strategies

test-suite surtur-test
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    hs-source-dirs:     test
    default-language:   Haskell2010
    default-extensions:
        TypeFamilies RankNTypes ExistentialQuantification LambdaCase
        MultiParamTypeClasses ScopedTypeVariables KindSignatures DataKinds
        ConstraintKinds QuantifiedConstraints TemplateHaskell
        DerivingStrategies GeneralizedNewtypeDeriving DeriveAnyClass
        TypeOperators UndecidableInstances PolyKinds FlexibleInstances
        FlexibleContexts AllowAmbiguousTypes TypeApplications

    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
        -Wincomplete-record-updates -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base >=4.13.0.0 && <5,
        vulkan -any,
        managed -any,
        critical -any,
        singletons -any,
        type-errors-pretty -any,
        surtur -any

    if impl(ghc >=8.0)
        ghc-options: -Wredundant-constraints

    if impl(ghc >=8.2)
        ghc-options: -fhide-source-paths

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists -Wpartial-fields

    if impl(ghc >=8.8)
        ghc-options: -Wmissing-deriving-strategies

benchmark surtur-benchmark
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     benchmark
    default-language:   Haskell2010
    default-extensions:
        TypeFamilies RankNTypes ExistentialQuantification LambdaCase
        MultiParamTypeClasses ScopedTypeVariables KindSignatures DataKinds
        ConstraintKinds QuantifiedConstraints TemplateHaskell
        DerivingStrategies GeneralizedNewtypeDeriving DeriveAnyClass
        TypeOperators UndecidableInstances PolyKinds FlexibleInstances
        FlexibleContexts AllowAmbiguousTypes TypeApplications

    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
        -Wincomplete-record-updates -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base >=4.13.0.0 && <5,
        vulkan -any,
        managed -any,
        critical -any,
        singletons -any,
        type-errors-pretty -any,
        gauge -any,
        surtur -any

    if impl(ghc >=8.0)
        ghc-options: -Wredundant-constraints

    if impl(ghc >=8.2)
        ghc-options: -fhide-source-paths

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists -Wpartial-fields

    if impl(ghc >=8.8)
        ghc-options: -Wmissing-deriving-strategies
